Some advance with LSTM

--- a/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
+++ b/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
@@ -472,7 +472,7 @@
     "    def __init__(self, origin_df, history_length, num_experiments, num_participants, exclude):\n",
     "        exps = [i for i in range(1,num_experiments + 1) if i != exclude]\n",
     "        parts = [i for i in range(1,num_participants + 1)]\n",
-    "        smp_df = self.create_history_encoded_df(df, history_length, expirements=exps, participants=parts)\n",
+    "        smp_df = self.create_history_encoded_df(origin_df, history_length, expirements=exps, participants=parts)\n",
     "        self.history_length = history_length\n",
     "        self.df = smp_df\n",
     "\n",
@@ -512,7 +512,7 @@
     "exclude = 10\n",
     "HISTORY_LEN = 10\n",
     "\n",
-    "# create the sliding window data frame\n",
+    "# create the raw history data frame\n",
     "hist_df = RawHistory(df, HISTORY_LEN, num_experiments, num_participants, exclude)"
    ]
   },
@@ -527,7 +527,7 @@
     "this sums up to 15 \\* 24 \\* 10 = 3600 </li>\n",
     "    <li> This sums up to 15 \\* 24 \\* 10 = 3600 </li>\n",
     "    <li> Indeed in the new data set there are exactly 3600 rows fewer than the origial data set <\\li>\n",
-    "    <li> Furthermore, the new data set has exactly 12 * {history_length + 1} + label columns = 12 * (10+1) + 1 = 133 columns <br>\n",
+    "    <li> Furthermore, the new data set has exactly 12 \\* {history_length + 1} + label columns = 12 * (10+1) + 1 = 133 columns <br>\n",
     "        (addition of one for the original data) </li>\n",
     "</ul>"
    ]
