--- a/notebooks/Submission/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
+++ b/notebooks/Submission/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +354,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feed Forward Neural Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -544,7 +551,197 @@
     "Intermediate neural conclusions:\n",
     "* Normal feed forward does not perform much better than random forest\n",
     "* Adding another layer did not improve at all the F1-score\n",
-    "* This might be because our sliding window is not an ideal input for n"
+    "* This might be because our sliding window is not an ideal input for time series neural network\n",
+    "* Try a recurrent neural network such as LSTM instead"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LSTM Recurrent Neural Network\n",
+    "* We would need to use raw data, and not summarized like Sliding Window\n",
+    "* Results may differ between vector sizes of **raw history** encoding\n",
+    "* Ideally we would predict each experiment separately but our data only contains dozens of experiments\n",
+    "* This means that another discreteziation method is required\n",
+    "* We will again use a **predefined vector size** (i.e. 10) in our raw history encoding\n",
+    "* Thus, We do not expect significant improvement comparing to the Feed Forward models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RawHistory:\n",
+    "    \n",
+    "    def __init__(self, origin_df, history_length, num_experiments, num_participants, exclude):\n",
+    "        exps = [i for i in range(1,num_experiments + 1) if i != exclude]\n",
+    "        parts = [i for i in range(1,num_participants + 1)]\n",
+    "        smp_df = self.create_history_encoded_df(origin_df, history_length, expirements=exps, participants=parts)\n",
+    "        self.history_length = history_length\n",
+    "        self.df = smp_df\n",
+    "\n",
+    "    def create_history_encoded_single_exp(self, orig_df, history_length):\n",
+    "        hist_df = orig_df.copy(deep=True) # later operations are \"in place\" so we need to avoid changing original dataframe\n",
+    "        columns_to_shift = hist_df.columns[:-1] # omit the action column, we don't want to duplicate it\n",
+    "        for i in range(1,history_length + 1):\n",
+    "            shift_df = orig_df.shift(i)\n",
+    "            for col_name in columns_to_shift:\n",
+    "                new_col_name = \"prev_{0}_\".format(i) + col_name\n",
+    "                hist_df[new_col_name] = shift_df[col_name] # add shifted column, aka history, as a column to orignal dataframe\n",
+    "\n",
+    "        hist_df = hist_df[history_length:] # we don't return the first \"history_length\" sample - they have missing history data\n",
+    "        return hist_df\n",
+    "\n",
+    "    def create_history_encoded_df(self, orig_df, history_length, expirements, participants):\n",
+    "        dfs_to_concate = []\n",
+    "        cols_to_drop = ['partc', 'action_file_index']\n",
+    "        for e in expirements:\n",
+    "            for p in participants:\n",
+    "                exp_df = orig_df[(orig_df['partc'] == p) & (orig_df['action_file_index'] == e)]\n",
+    "                exp_df = exp_df.drop(cols_to_drop, axis=1)\n",
+    "                exp_histoy_df = self.create_history_encoded_single_exp(exp_df, history_length)\n",
+    "                dfs_to_concate.append(exp_histoy_df)\n",
+    "        return pd.concat(dfs_to_concate, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining variables for the raw history data frame creation\n",
+    "num_experiments = 16\n",
+    "num_participants = 24\n",
+    "exclude = 10\n",
+    "HISTORY_LEN = 10\n",
+    "\n",
+    "# create the raw history data frame for training\n",
+    "train_hist_df = RawHistory(train_df, HISTORY_LEN, num_experiments, num_participants, exclude)\n",
+    "train_hist_df = train_hist_df.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the raw history data frame for testing\n",
+    "num_experiments = 18\n",
+    "num_participants = 1\n",
+    "exclude = 0\n",
+    "HISTORY_LEN = 10\n",
+    "\n",
+    "test_hist_df = RawHistory(real_test_df, HISTORY_LEN, num_experiments, num_participants, exclude)\n",
+    "test_hist_df = test_hist_df.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = {'wlk': 0, 'sit': 1, \"std\": 2, \"ups\": 3, \"jog\": 4, \"dws\": 5}\n",
+    "\n",
+    "hist_train_processor = DataProcessingEval(train_hist_df, labels_dict=labels)\n",
+    "X_train, y_train, _, _, _, _  = hist_train_processor.create_samples([1.0, 0, 0])\n",
+    "\n",
+    "hist_test_processor = DataProcessingEval(test_hist_df, labels_dict=labels)\n",
+    "X_test_real, y_test_real, _, _, _, _ = hist_test_processor.create_samples([1.0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The LSTM can deal with sequence of inputs, thus we don't need to explicitly encode our raw history as one long vectort as before.\n",
+    "* We will pass to the LSTM model a sequence of 11 data points (10 history and actual data point)\n",
+    "* Each data point is a vector of length 12 (our 12 origianl features)\n",
+    "* Thus, we need to transform our raw encoding long vector to a sequence of data points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_FEATURES = 12\n",
+    "X_train = np.array(X_train)\n",
+    "X_train = np.flip(X_train, axis=1)  # reverse the sequence from past to present\n",
+    "X_train = X_train.reshape(-1, HISTORY_LEN + 1, NUM_FEATURES)  # reshape for LSTM sequence input (num_samples, 11, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1409265, 11, 12)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import LSTM, Embedding\n",
+    "\n",
+    "dropout_rate = 0.5\n",
+    "\n",
+    "lstm_model = Sequential()\n",
+    "lstm_model.add(Embedding(input_dim=X_train.shape[2], output_dim=5, input_length=X_train.shape[1]))\n",
+    "lstm_model.add(LSTM(32, return_sequences=False, dropout=dropout_rate))\n",
+    "lstm_model.add(Dense(6, activation='softmax'))  # applying softmax and cross entorpy loss\n",
+    "lstm_model.compile(loss='categorical_crossentropy',optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking input: expected embedding_4_input to have 2 dimensions, but got array with shape (1409265, 11, 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-158-30fe90dbe2c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# tranform y to one hot encoding vector of length 6 (we have 6 activities)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlstm_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_one_hot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[1;32m    953\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    954\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 955\u001b[0;31m             batch_size=batch_size)\n\u001b[0m\u001b[1;32m    956\u001b[0m         \u001b[0;31m# Prepare validation data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    957\u001b[0m         \u001b[0mdo_validation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[1;32m    752\u001b[0m             \u001b[0mfeed_input_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    753\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Don't enforce the batch size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 754\u001b[0;31m             exception_prefix='input')\n\u001b[0m\u001b[1;32m    755\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    756\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    124\u001b[0m                         \u001b[0;34m': expected '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' to have '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m                         \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' dimensions, but got array '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m                         'with shape ' + str(data_shape))\n\u001b[0m\u001b[1;32m    127\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m                     \u001b[0mdata_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Error when checking input: expected embedding_4_input to have 2 dimensions, but got array with shape (1409265, 11, 12)"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "num_activities = 6\n",
+    "y_train_one_hot = np.array([to_categorical(t, num_activities) for t in y_train])\n",
+    "\n",
+    "# tranform y to one hot encoding vector of length 6 (we have 6 activities)\n",
+    "lstm_model.fit(X_train, y_train_one_hot, batch_size=32, epochs=5)"
    ]
   }
  ],
