Some spelling corrections

--- a/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
+++ b/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
@@ -55,10 +55,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our data is a time series - a sequence of measurments over time\n",
+    "Our data is a time series - a sequence of measurements over time\n",
     "<ul>\n",
     "    <li> Thus, extracting value for a single data point depends on it's context </li> \n",
-    "    <li> But, classic ML algorithms/classifiers predicts output for a single input data point - independent to ajdecent input data point </li>\n",
+    "    <li> But, classic ML algorithms/classifiers predicts output for a single input data point - independent to adjecent input data point </li>\n",
     "    <li> So, in order to use our data to train classic ML model we will have to encode our features to represent context data </li>\n",
     "    <li> We will present two different features encoding methods - Sliding-Window and Raw-History </li>\n",
     "</ul>"
@@ -76,7 +76,7 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> In this method, we will encode each data sample as a concatenation of anayltical functions calculated over a predefined size of previous samples </li>\n",
+    "<li> In this method, we will encode each data sample as a concatenation of analytical functions calculated over a predefined size of previous samples </li>\n",
     "<li> For example, here we will use a context size of 10 (calculate over 10 pervious data points) </li>\n",
     "<li> Notice that we cannot mix between different expirements who represents different activity label </li>\n",
     "</ul>"
@@ -412,15 +412,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Sanity check: </b> <br>\n",
-    "<ul>\n",
-    "    <li> There are 15 expirements and 24 participants for each expirement </li>\n",
-    "    <li> For sliding window of 10 samples we are loosing 10 data samples of each expirement </li>\n",
-    "    <li> This sums up to 15 \\* 24 \\* 10 = 3600 </li>\n",
-    "    <li> Indeed in the new data set there are exactly 3600 rows fewer than the origial data set <\\li>\n",
-    "    <li> Furthermore, the new data set has exactly 12 * {num_analytical_function} + label column = 12 \\* 6 + 1 = 73 columns <br>\n",
-    "        (12 is the number of features in the original data set) </li>\n",
-    "</ul>"
+    "Sanity check:\n",
+    "\n",
+    "* There are 15 experiments and 24 participants for each expirement\n",
+    "* For sliding window of 10 samples we are loosing 10 data samples of each experiment\n",
+    "* This sums up to 15 \\* 24 \\* 10 = 3600\n",
+    "* Indeed in the new data set there are exactly 3600 rows fewer than the origial data set\n",
+    "* Furthermore, the new data set has exactly 12 \\* {num_analytical_function} + label column = 12 \\* 6 + 1 = 73 columns \n",
+    "(12 is the number of features in the original data set)"
    ]
   },
   {
@@ -643,8 +642,8 @@
     "    <li> Our evaluation metrics will be precision, recall and their harmonic average the F1 score </li>\n",
     "    <li> These metrics are much more relevant to our problem compared to the model total accuracy for few reasons. </li>\n",
     "    <li> First, our problem is imbalanced. We've already seen that the labels walk sit and stand are x2 time more frequent than going up/down stairs </li>\n",
-    "    <li> Second, We also consider our assumption that same activities will be much harder to predict compared to others. i.e separating \"sit\" from \"walk\" should be much easier than separating between \"upstairs\" and \"downstairs\" </li>\n",
-    "    <li> That is why we'll be interested in the model performace for each activity by its own.\n",
+    "    <li> Second, We also consider our assumption that some activities will be much harder to predict compared to others. i.e separating \"sit\" from \"walk\" should be much easier than separating between \"upstairs\" and \"downstairs\" </li>\n",
+    "    <li> That is why we'll be interested in the model performance for each activity by its own.\n",
     "</ul>"
    ]
   },
@@ -660,8 +659,8 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> We will start with a simple linear model and evalute it's performace using our two different encodings </li>\n",
-    "<li> We will use logistic regression with L2 loss function (MSE), with the default C=1.0 regularization value <br> (which defines our tradeoff between regularization term and actual loss in the loss function </li>\n",
+    "<li> We will start with a simple linear model and evaluate its performnace using our two different encodings </li>\n",
+    "<li> We will use logistic regression with L2 loss function (MSE), with the default C=1.0 regularization value <br> (which defines our tradeoff between regularization term and actual loss in the loss function)</li>\n",
     "</ul>"
    ]
   },
@@ -883,8 +882,8 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> We can see that the results of the same classifier with the raw history enconding are much worse compared to the sliding window encodnig - even with the relatively \"easy\" to predict activites sit and stand </li>\n",
-    "    <li> This leads to a conclusion that the data is not lineary separable with the raw history encoding, and might be even the same with the sliding window aggregation encoding </li>\n",
+    "<li> We can see that the results of the same classifier with the raw history encoding are much worse compared to the sliding window encoding - even with the relatively \"easy\" to predict activities sit and stand </li>\n",
+    "    <li> This leads to a conclusion that the data is not linearly separable with the raw history encoding, and might be even the same with the sliding window aggregation encoding </li>\n",
     "    <li> Next, we will try a stronger, non linear model to try and incorporate more complexed relations between our features\n",
     "</ul>"
    ]
@@ -901,7 +900,7 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> We will evaluate the performace of a non linear random forest model over our two different encoding data sets </li>\n",
+    "<li> We will evaluate the performance of a non linear random forest model over our two different encoding data sets </li>\n",
     "    <li> This model can be trained much faster due to options to parallelize the training of independent trees </li>\n",
     "    <li> We will run few different architectures of number of trees and evaluate them on our validation set </li>\n",
     "</ul>"
@@ -1294,11 +1293,11 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> As we can see, even on our left aside test data the performace of the model is too good to be true. </li>\n",
+    "<li> As we can see, even on our left aside test data the performance of the model is too good to be true. </li>\n",
     "<li> This is a reason to suspect that although we tested our model on data was not used to train it, <b> we are over-fitting to the current data set as a whole </b>  </li>\n",
     "    <li> We suspect that <b> the generation process of the data was too \"synthetic\" </b>, not represeting \"real world\" data obtained from phone sensors </li>\n",
-    "    <li> We used this expirment framework to <b> extract real data obtained from our activities </b> during the day and labeled them accordingly </li>\n",
-    "    <li> In the next notebook we will present our model performace on our \"real world\" data and try to train more complex models to improve our performace over the real world data </li>\n",
+    "    <li> We used this experiment framework to <b> extract real data obtained from our activities </b> during the day and labeled them accordingly </li>\n",
+    "    <li> In the next notebook we will present our model performance on our \"real world\" data and try to train more complex models to improve our performance over the real world data </li>\n",
     "</ul>"
    ]
   }
