Documentation and Notebook #2

--- a/notebooks/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
+++ b/notebooks/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_MAIN_DIR = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
+    "PROJECT_MAIN_DIR = os.getcwd()\n",
     "path = os.path.join(PROJECT_MAIN_DIR, 'real-data')\n",
     "data_loader = NewDataLoader(path)\n",
     "real_test_df = data_loader.load_all_expirements()"
@@ -326,7 +326,7 @@
    "source": [
     "Conclusions so far:\n",
     "<ul>\n",
-    "    <li> We excluded the \"jogging\" activity beacuse we didn't preform this activity in the data we created from our app </li>\n",
+    "    <li> We excluded the \"jogging\" activity because we didn't perform this activity in the data we created from our app </li>\n",
     "    <li> As predicted, the results on real world data are much worse compared to results over our original test set </li>\n",
     "    <li> We are still predicting \"sit\" and \"stand\" activities quite well but our current model is having hard time identifying \"upstairs\" and \"down stairs\" </li>\n",
     "    <li> Next, we will try to use a stronger, neural models, hoping that it will help us increasing our performance over the real test data\n",
@@ -349,7 +349,7 @@
     "    <li> The first model we will try is a simple feed forward network with one hidden layer </li>\n",
     "    <li> Feed forward nets, like classic ML models, cannot use sequence as input so we will have to use one of our previous encodings </li>\n",
     "    <li> We will choose our sliding window encoding first, since it out-performed our raw history encoding </li>\n",
-    "    <li> We hope that our model can creat a better representation of the data in it's hidden layer and thus increase the generalization ability of the model </li>\n",
+    "    <li> We hope that our model can create a better representation of the data in it's hidden layer and thus increase the generalization ability of the model </li>\n",
     "</ul>"
    ]
   },
@@ -810,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
