--- a/notebooks/Part 1 - Business understanding, Loading the data, and Data exploration.ipynb
+++ b/notebooks/Part 1 - Business understanding, Loading the data, and Data exploration.ipynb
@@ -130,8 +130,7 @@
     "\n",
     "* The data is divide into csv files\n",
     "* Each file represents a trail performed by a specific participant, labeld with a specific action\n",
-    "* We would like to load the data into a single Pandas Data Frame object. <br />\n",
-    "with indicators for the specific participant and the action performed\n"
+    "* We would like to load the data into a single Pandas Data Frame object with indicators <br /> for the specific participant and the action performed\n"
    ]
   },
   {
@@ -731,9 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>\n",
-    "Correlation between participants\n",
-    "</h5>"
+    "### Correlation between participants"
    ]
   },
   {
@@ -887,9 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>\n",
-    "Visualize smooth version of the features over time\n",
-    "</h5>"
+    "### Visualize smooth version of the features over time"
    ]
   },
   {
@@ -1092,7 +1087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5> Visualization of changes in the Acceleration features"
+    "### Visualization of changes in the Acceleration features"
    ]
   },
   {
